dig-src/main/default/objects/DIG_MembershipNoticeWindow__mdt/DIG_MembershipNoticeWindow__mdt.object-meta.xml
<CustomObject>
    <label>DIG Membership Notice Window</label>
    <pluralLabel>DIG Membership Notice Windows</pluralLabel>
</CustomObject>