dig-src/main/default/objects/DIG_MembershipNoticeWindow__mdt/fields/CreateTask__c.field-meta.xml
<CustomField>
    <fullName>CreateTask__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Create Task</label>
    <type>Checkbox</type>
</CustomField>