dig-src/main/default/objects/DIG_MembershipNoticeWindow__mdt/fields/DedupeKey__c.field-meta.xml
<CustomField>
    <fullName>DedupeKey__c</fullName>
    <label>Dedupe Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>