dig-src/main/default/objects/DIG_MembershipNoticeWindow__mdt/fields/TaskOwnerId__c.field-meta.xml
<CustomField>
    <fullName>TaskOwnerId__c</fullName>
    <label>Task Owner Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>