dig-src/main/default/objects/DIG_MembershipNoticeWindow__mdt/fields/TaskOwnerMode__c.field-meta.xml
<CustomField>
    <fullName>TaskOwnerMode__c</fullName>
    <label>Task Owner Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ContactOwner</fullName>
                <default>true</default>
                <label>ContactOwner</label>
            </value>
            <value>
                <fullName>FixedUser</fullName>
            </value>
            <value>
                <fullName>Queue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>