dig-src/main/default/objects/DIG_MembershipNoticeWindow__mdt/fields/WindowDaysBeforeEnd__c.field-meta.xml
<CustomField>
    <fullName>WindowDaysBeforeEnd__c</fullName>
    <label>Window Days Before End</label>
    <precision>3</precision>
    <scale>0</scale>
    <required>true</required>
    <type>Number</type>
</CustomField>